// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardCenterpiece should match snapshot if selection is favorites 1`] = `
<div
  aria-label="section-label"
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      aria-label="saved-items-icon"
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      aria-label="saved-items-count"
      className="fav-count-display"
    >
      3
    </h4>
  </div>
  <i
    aria-label="jedi-order-icon"
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  />
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is not people/planets/vehicles/favorites 1`] = `
<div
  aria-label="section-label"
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      aria-label="saved-items-icon"
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      aria-label="saved-items-count"
      className="fav-count-display"
    >
      3
    </h4>
  </div>
  <i
    aria-label="jedi-order-icon"
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  />
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is people 1`] = `
<div
  aria-label="section-label"
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      aria-label="saved-items-icon"
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      aria-label="saved-items-count"
      className="fav-count-display"
    >
      3
    </h4>
  </div>
  <i
    aria-label="jedi-order-icon"
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Persons of Interest
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is planets 1`] = `
<div
  aria-label="section-label"
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      aria-label="saved-items-icon"
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      aria-label="saved-items-count"
      className="fav-count-display"
    >
      3
    </h4>
  </div>
  <i
    aria-label="jedi-order-icon"
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Locations of Interest
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;

exports[`CardCenterpiece should match snapshot if selection is vehicles 1`] = `
<div
  aria-label="section-label"
  className="card-centerpiece"
>
  <div
    className="fav-total-wrapper"
  >
    <i
      aria-label="saved-items-icon"
      className="fas fa-journal-whills total-fav-icon"
    />
    <h4
      aria-label="saved-items-count"
      className="fav-count-display"
    >
      3
    </h4>
  </div>
  <i
    aria-label="jedi-order-icon"
    className="fab fa-jedi-order centerpiece-icon"
  />
  <h3
    className="centerpiece-text"
  >
    Available Conveyance
  </h3>
  <p
    className="centerpiece-fav-text"
  >
    tap to save data
  </p>
</div>
`;
